--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www" 
+    "start": "node ./server/bin/www" 
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,3 +14,4 @@
     "morgan": "~1.9.1"
   }
 }
+
